# guardian-db

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: check.yml  odm-ci.yml  release.yml  rust.yml  sync.yml
benches/: odm_benchmark.rs  sql_engine.rs
docs/: ODM_BENCHMARKS.md  SENTINEL_TUI.md  compute.md  development-log.md  odm.md  postgres-compat.md  supabase-compat.md
docs/rfcs/: 0001-fenced-shard-primaries.md
examples/: p2p_chat_demo.rs  p2p_chat_tui.rs  postgres_iroh_gateway.rs
examples/postgres-typeorm/: README.md  guardian-workspace.json  package.json
examples/postgres-typeorm/src/: connection-string.ts  data-source.ts
guardian-compute-sdk/: Cargo.toml
guardian-compute-sdk-macros/: Cargo.toml
guardian-compute-sdk-macros/src/: lib.rs
guardian-compute-sdk/examples/: echo_task.rs  lookup_task.rs  shout_task.rs  word_count_task.rs
guardian-compute-sdk/src/: lib.rs
guardian-db-derive/: Cargo.toml
guardian-db-derive/src/: lib.rs
src/: address.rs  db_manifest.rs  events.rs  keystore.rs  lib.rs  traits.rs
src/access_control/: manifest.rs
src/compute/: ledger.rs  mod.rs  nn.rs  protocol.rs  runtime.rs  scheduler.rs  telemetry.rs  triggers.rs
src/guardian/: core.rs  mod.rs
src/log/: identity.rs  identity_provider.rs
src/odm/: collection.rs  query.rs  schema.rs  storage.rs  update.rs
src/p2p/: mod.rs
src/p2p/messaging/: direct_channel.rs  mod.rs  one_on_one_channel.rs
src/p2p/network/: client.rs  config.rs  types.rs
src/p2p/network/core/: blobs.rs  connection_pool.rs  gossip.rs  key_synchronizer.rs  mod.rs  networking_metrics.rs  ticket_exchange.rs
src/relational/: catalog.rs  error.rs  fts.rs  index.rs  mod.rs  types.rs  value.rs
src/sentinel/: client.rs  mod.rs  server.rs  store_registry.rs
src/sql/: catalog_views.rs  ddl.rs  dml.rs  engine.rs  eval.rs  exec.rs  fk.rs  fts.rs  funcs.rs  mod.rs  names.rs  parser.rs  rls.rs  row.rs  select.rs  store.rs  tests.rs  trigger.rs  udf.rs  window.rs
src/sql/ext/: alter.rs  citext.rs  cube.rs  earthdistance.rs  fuzzystrmatch.rs  hstore.rs  intarray.rs  ltree.rs  mod.rs  pg_trgm.rs  pgcrypto.rs  sidecar.rs  unaccent.rs  uuid_ossp.rs  vector.rs
src/stores/: events.rs
src/stores/base_store/: index.rs  mod.rs
src/stores/document_store/: mod.rs
src/stores/kv_store/: mod.rs
src/supabase/: auth.rs  error.rs  gateway.rs  graphql.rs  jwt.rs  mod.rs  pg_meta.rs  project.rs  realtime.rs  rest.rs  storage.rs
src/tests/: connection_pool_test.rs  guardian_core_test.rs  guardian_wrapper_test.rs  iroh_backend_test.rs  manifest_test.rs  networking_metrics_test.rs
tests/: compute_delegation.rs  compute_sdk.rs  integration_replication.rs  odm.rs  odm_benchmark_reliability.rs  sql_conformance.rs  sql_extensions.rs  sql_fk_advanced.rs  sql_fts.rs  sql_functions.rs  sql_rls.rs  sql_triggers.rs  sql_triggers_extended.rs  supabase_gateway.rs  supabase_graphql.rs  supabase_storage_realtime.rs
tests/supabase_js/: package.json  smoke.mjs
