[package]
name = "guardian-db"
version = "0.18.0"
authors = ["William Maslonek <wmaslonek@icloud.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.97.0"
description = "High-performance, local-first decentralized database built on Rust and Iroh"
repository = "https://github.com/wmaslonek/guardian-db/"
readme = "README.md"
homepage = "https://www.willsearch.com.br/"
documentation = "https://docs.rs/guardian-db"
keywords = ["database", "p2p", "iroh", "decentralized", "crdt"]
categories = ["database-implementations", "network-programming", "web-programming"]

[features]
default = []
odm = ["dep:guardian-db-derive", "uuid/v4"]
# Administration RPC: a loopback socket server that exposes read/ops over a live
# GuardianDB (the `sentinel` module + `guardian-sentinel-server` binary). Reuses
# tokio / serde / async-trait, which are already non-optional dependencies.
sentinel = ["dep:image", "dep:ratatui-image"]
# PostgreSQL-compatible SQL on top of GuardianDB's replicated document storage
# (the `relational` + `sql` modules).
sql = ["dep:sqlparser", "dep:rust_decimal", "uuid/v4", "uuid/v1", "uuid/v3", "uuid/v5", "uuid/v6", "uuid/v7", "dep:sha1", "dep:sha2", "dep:md-5", "dep:hmac", "dep:bcrypt", "dep:unicode-normalization", "dep:rust-stemmers"]
# PostgreSQL wire-protocol server (the `pgwire` module + `guardian-pgwire` binary).
pgwire = ["sql", "dep:pgwire"]
# Supabase-compatible HTTP gateway (Kong-shaped REST + Auth) over the `sql`
# engine (the `supabase` module + `guardian-supabase` binary). Reuses the
# hmac/sha2/base64/bcrypt crypto already pulled in by `sql`.
# `graphql-parser` (pure Rust, tiny dep tree) parses GraphQL documents for the
# pg_graphql-compatible `/graphql/v1` endpoint.
supabase = ["sql", "dep:axum", "dep:tower", "dep:graphql-parser"]
# Guardian Compute: delegation of business-logic execution (WASM) between peers,
# with capability-aware routing (the `compute` module). Phases 0-5 of
# docs/rfcs/0002-guardian-compute.md: public types, sandboxed wasmtime runtime
# with opt-in host capabilities, the delegation protocol (COMPUTE_ALPN on the
# Router, execute + Contract-Net probe), capability telemetry over gossip, the
# scoring scheduler (failover, auction, MapReduce fan-out, k-of-n redundancy
# with reputation), and the reactive layer (task ledger + triggers).
compute = ["dep:wasmtime", "dep:sysinfo", "uuid/v4"]
# Edge AI for Guardian Compute: links the
# wasi-nn API into the task sandbox as an opt-in host capability
# (HostGrants::nn), backed by ONNX Runtime (the only backend portable across
# Windows/Linux/macOS without a manual runtime install; `onnx-download`
# fetches its binaries at build time). Heavy build, kept out of `compute`.
compute-nn = ["compute", "dep:wasmtime-wasi-nn", "dep:ort"]
# GPU execution for Guardian Compute NN models: loads
# models with the CUDA execution provider when `NnTarget::Gpu` is selected,
# and verifies advertised `Accel::Gpu` against the real CUDA availability.
# Pulls the CUDA-enabled ONNX Runtime binaries (large download at build).
compute-nn-cuda = ["compute-nn", "wasmtime-wasi-nn/onnx-cuda"]

[dependencies]
async-trait = "0.1.89"
async-stream = "0.3.6"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.3"
futures = "0.3.31"
opentelemetry = "0.32.0"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.143"
tempfile = "3.21.0"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rand = "0.10.2"
hex = "0.4.3"
iroh = "1.0.2"
iroh-io = "0.6.1"
iroh-blobs = "0.103.0"
iroh-gossip = "0.101.0"
iroh-docs = "0.101.0"
iroh-mdns-address-lookup = "0.4.0"
bytes = "1.12.1"
ed25519-dalek = { version = "3.0.0-rc.0", features = ["serde"] }
uuid = { version = "1.23.5", features = ["serde"] }
blake3 = "1.8.2"
zeroize = "1.8"
lru = "0.18.1"
zstd = "0.13.3"
futures-lite = "2.6.1"
postcard = { version = "1.1.3", features = ["use-std"] }
ratatui = "0.30.0"
redb = "4.1.0"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
ratatui-image = { version = "11", optional = true, default-features = false, features = ["crossterm"] }
guardian-db-derive = { version = "0.17.0", path = "guardian-db-derive", optional = true }
sqlparser = { version = "0.62", optional = true }
sha1 = { version = "0.11.0", optional = true }
sha2 = { version = "0.11.0", optional = true }
md-5 = { version = "0.11.0", optional = true }
hmac = { version = "0.13.0", optional = true }
bcrypt = { version = "0.19.2", optional = true }
unicode-normalization = { version = "0.1", optional = true }
rust-stemmers = { version = "1", optional = true }
rust_decimal = { version = "1.37", features = ["serde"], optional = true }
pgwire = { version = "0.40", optional = true }
axum = { version = "0.8", optional = true, features = ["ws"] }
tower = { version = "0.5", optional = true, features = ["util"] }
graphql-parser = { version = "0.4", optional = true }
wasmtime = { version = "46.0.1", default-features = false, features = ["runtime", "cranelift"], optional = true }
sysinfo = { version = "0.39.6", optional = true }
wasmtime-wasi-nn = { version = "46.0.1", default-features = false, features = ["onnx-download"], optional = true }
ort = { version = "=2.0.0-rc.10", default-features = false, optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.8.0"
dialoguer = "0.12.0"
console = "0.16.4"
chrono = "0.4"
crossterm = "0.29.0"
base64 = "0.22.1"
tokio-postgres = "0.7"
tokio-tungstenite = "0.30.0"
wat = "1.253.0"
ciborium = "0.2"

[[bin]]
name = "guardian-sentinel"
path = "src/bin/guardian-sentinel.rs"
required-features = ["sentinel"]

[[bin]]
name = "guardian-pgwire"
path = "src/bin/guardian-pgwire.rs"
required-features = ["pgwire"]

[[bin]]
name = "guardian-supabase"
path = "src/bin/guardian-supabase.rs"
required-features = ["supabase"]

[[bin]]
name = "guardian-sentinel-server"
path = "src/bin/guardian-sentinel-server.rs"
required-features = ["sentinel"]

[[example]]
name = "postgres_iroh_gateway"
path = "examples/postgres_iroh_gateway.rs"
required-features = ["pgwire"]

[[test]]
name = "sql_conformance"
path = "tests/sql_conformance.rs"
required-features = ["sql"]

[[test]]
name = "sql_locks"
path = "tests/sql_locks.rs"
required-features = ["sql"]

[[test]]
name = "sql_replication"
path = "tests/sql_replication.rs"
required-features = ["sql"]

[[test]]
name = "sql_extensions"
path = "tests/sql_extensions.rs"
required-features = ["sql"]

[[test]]
name = "sql_rls"
path = "tests/sql_rls.rs"
required-features = ["sql"]

[[test]]
name = "sql_functions"
path = "tests/sql_functions.rs"
required-features = ["sql"]

[[test]]
name = "sql_triggers"
path = "tests/sql_triggers.rs"
required-features = ["sql"]

[[test]]
name = "sql_fts"
path = "tests/sql_fts.rs"
required-features = ["sql"]

[[test]]
name = "sql_fk_advanced"
path = "tests/sql_fk_advanced.rs"
required-features = ["sql"]

[[test]]
name = "sql_triggers_extended"
path = "tests/sql_triggers_extended.rs"
required-features = ["sql"]

[[test]]
name = "pgwire_wire"
path = "tests/pgwire_wire.rs"
required-features = ["pgwire"]

[[test]]
name = "supabase_gateway"
path = "tests/supabase_gateway.rs"
required-features = ["supabase"]

[[test]]
name = "supabase_storage_realtime"
path = "tests/supabase_storage_realtime.rs"
required-features = ["supabase"]

[[test]]
name = "supabase_graphql"
path = "tests/supabase_graphql.rs"
required-features = ["supabase"]

[[test]]
name = "compute_delegation"
path = "tests/compute_delegation.rs"
required-features = ["compute"]

[[test]]
name = "compute_sdk"
path = "tests/compute_sdk.rs"
required-features = ["compute"]

[[bench]]
name = "iroh_gossipsub_performance"
harness = false

[[bench]]
name = "odm_benchmark"
harness = false
required-features = ["odm"]

[workspace]
members = [
    "guardian-db-derive",
    "guardian-compute-sdk",
    "guardian-compute-sdk-macros",
]
resolver = "2"
